Добавлен еще один вариант записи метода agg

--- a/Lesson 2.ipynb
+++ b/Lesson 2.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 111,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 112,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -57,7 +57,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 113,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -66,7 +66,7 @@
        "array([2. , 8.4])"
       ]
      },
-     "execution_count": 113,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,7 +94,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 114,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -107,7 +107,7 @@
        "       [-1. , -1.4]])"
       ]
      },
-     "execution_count": 114,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -135,7 +135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 115,
+   "execution_count": 5,
    "metadata": {
     "scrolled": false
    },
@@ -146,7 +146,7 @@
        "2.0"
       ]
      },
-     "execution_count": 115,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 116,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -190,7 +190,7 @@
        "True"
       ]
      },
-     "execution_count": 116,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -216,7 +216,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 117,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -232,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 118,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -287,7 +287,7 @@
        "2          3  Островский"
       ]
      },
-     "execution_count": 118,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -307,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 119,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -394,7 +394,7 @@
        "6          3  Таланты и поклонники    290"
       ]
      },
-     "execution_count": 119,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -424,7 +424,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 120,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -519,7 +519,7 @@
        "6          3  Островский  Таланты и поклонники    290"
       ]
      },
-     "execution_count": 120,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -545,7 +545,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 121,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -624,7 +624,7 @@
        "2          1    Тургенев  Дворянское гнездо    350"
       ]
      },
-     "execution_count": 121,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -652,8 +652,88 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 122,
+   "execution_count": 12,
    "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>amax</th>\n",
+       "      <th>amin</th>\n",
+       "      <th>mean</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>author_name</th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>Островский</th>\n",
+       "      <td>370</td>\n",
+       "      <td>290</td>\n",
+       "      <td>330.000000</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Тургенев</th>\n",
+       "      <td>450</td>\n",
+       "      <td>300</td>\n",
+       "      <td>366.666667</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>Чехов</th>\n",
+       "      <td>500</td>\n",
+       "      <td>450</td>\n",
+       "      <td>475.000000</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             amax  amin        mean\n",
+       "author_name                        \n",
+       "Островский    370   290  330.000000\n",
+       "Тургенев      450   300  366.666667\n",
+       "Чехов         500   450  475.000000"
+      ]
+     },
+     "execution_count": 12,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "authors_stat = authors_price.groupby('author_name')['price'].agg([np.max, np.min, np.mean])\n",
+    "authors_stat"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "scrolled": false
+   },
    "outputs": [
     {
      "data": {
@@ -727,7 +807,7 @@
        "Чехов         500  450  475.000000"
       ]
      },
-     "execution_count": 122,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -739,7 +819,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 123,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -802,7 +882,7 @@
        "2       Чехов        500        450  475.000000"
       ]
      },
-     "execution_count": 123,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -831,7 +911,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -934,7 +1014,7 @@
        "6          3  Островский  Таланты и поклонники    290   мягкая"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -953,7 +1033,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -972,7 +1052,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -1042,7 +1122,7 @@
        "Чехов            0     950"
       ]
      },
-     "execution_count": 126,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1055,7 +1135,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 127,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -1120,7 +1200,7 @@
        "2           Чехов      0     950"
       ]
      },
-     "execution_count": 127,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1132,7 +1212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 128,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1144,7 +1224,7 @@
        "Name: мягкая, dtype: int64"
       ]
      },
-     "execution_count": 128,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1155,7 +1235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 129,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1214,7 +1294,7 @@
        "2       Чехов       0      950"
       ]
      },
-     "execution_count": 129,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1229,7 +1309,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 130,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1290,7 +1370,7 @@
        "Чехов             0      950"
       ]
      },
-     "execution_count": 130,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1309,7 +1389,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 131,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1325,7 +1405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 132,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1386,7 +1466,7 @@
        "Чехов             0      950"
       ]
      },
-     "execution_count": 132,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1405,7 +1485,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 133,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1466,7 +1546,7 @@
        "Чехов          True     True"
       ]
      },
-     "execution_count": 133,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
