Изменения в формате данных итогового файла

--- a/Курсовой проект 2/Project.ipynb
+++ b/Курсовой проект 2/Project.ipynb
@@ -7667,7 +7667,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_test = pd.DataFrame(y_test)"
+    "y_test = pd.DataFrame(y_test, )"
    ]
   },
   {
